--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="MESSI_KeyPad" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MESSI_KeyPad.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="15749bad338b52eeb304f7d7bb372d90" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\15749bad338b52eeb304f7d7bb372d90.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="MESSI_LogIn_PanelBG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MESSI_LogIn_PanelBG.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="15749bad338b52eeb304f7d7bb372d90" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\15749bad338b52eeb304f7d7bb372d90.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="MESSI_KeyPad" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MESSI_KeyPad.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="MESSI_KeyPadBG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MESSI_KeyPadBG.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
